src/objects/Interest_On_Overdue_Payment__c.object
<CustomObject>
    <description>Stores all the payments adjusted towards interest on overdue.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>amount</description>
        <inlineHelpText>amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Interest On Overdue Payments</relationshipLabel>
        <relationshipName>Interest_On_Overdue_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>date on which this payment was made.</description>
        <inlineHelpText>date on which this payment was made.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Interest On Overdue Payment</label>
    <nameField>
        <label>Interest On Overdue Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest On Overdue Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>